--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/public/$1"
+    /frontend/public/index.html"dest": "/frontend/public/$1"
     }
   ]
 }
