Fix JSON syntax error in vercel.json
Fixed malformed JSON syntax on line 20 that was causing build failures.
Replaced invalid comment and broken JSON structure with proper route destination.
This should resolve the "Could not parse File as JSON: vercel.json" error.

--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,6 @@
     },
     {
       "src": "/(.*)",
-    /frontend/public/index.html"dest": "/frontend/public/$1"
-    }
+      "dest": "/frontend/public/index.html"    }
   ]
 }
