--- a/netlify.toml
+++ b/netlify.toml
@@ -1,50 +1,19 @@
 [build]
-  # Use pre-built React files - no build needed
-  publish = "."
-  command = "echo 'Deployment using pre-built React files - no build required'"
-  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF frontend/"
+  publish = "public"
+  command = "echo 'No build required - static HTML app'"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [build.environment]
   NODE_VERSION = "18"
 
-[[redirects]]
-  # API redirects to serverless functions
-  from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
-  status = 200
-
-[[redirects]]
-  # SPA redirect - serve index.html for all routes
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  conditions = {Role = ["guest"]}
-
-[functions]
-  # Configure the serverless function
-  directory = "netlify/functions"
-
 [[headers]]
-  for = "/static/*"
+  for = "/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "/*.css"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "/sw.js"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
-
-[[headers]]
-  for = "/manifest.json"
-  [headers.values]
-    Cache-Control = "public, max-age=86400"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
