--- a/package.json
+++ b/package.json
@@ -1,58 +1,36 @@
 {
-  "name": "giftgenius-mvp",
-  "version": "1.0.0",
-  "description": "GiftGenius - Gift Ideas That Actually Work",
-  "scripts": {
-    "install:all": "npm run install:backend && npm run install:frontend",
-    "install:backend": "cd backend && npm install",
-    "install:frontend": "cd frontend && npm install",
-    "build": "npm run build:frontend",
-    "build:frontend": "cd frontend && npm run build",
-    "start": "NODE_ENV=production node backend/server-production.js",
-    "start:dev": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
-    "backend:dev": "cd backend && npm run dev",
-    "frontend:dev": "cd frontend && npm start",
-    "setup:db": "cd backend && node database/setup-sqlite.js",
-    "test": "npm run test:backend && npm run test:frontend",
-    "test:backend": "cd backend && npm test",
-    "test:frontend": "cd frontend && npm test",
-    "postinstall": "npm run install:all && npm run build"
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=7.0.0"
-  },
-  "devDependencies": {
-    "concurrently": "^7.6.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eratner15/giftgenius-mvp.git"
-  },
-  "keywords": [
-    "gift",
-    "recommendations",
-    "react",
-    "node",
-    "express"
-  ],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eratner15/giftgenius-mvp/issues"
-  },
-  "homepage": "https://github.com/eratner15/giftgenius-mvp#readme",
+  "name": "giftgenius-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^8.1.0",
-    "compression": "^1.8.1",
-    "express-rate-limit": "^8.1.0",
-    "express-validator": "^7.2.1",
-    "sqlite3": "^5.1.7",
-    "serverless-http": "^3.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.8.0",
+    "axios": "^1.3.0"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:3001"
 }
